# chatbot-illuminus

./: .gitignore  LICENSE  README.md
chatbot/: prompts.yaml  pyproject.toml
chatbot/backend/: __init__.py  bot_graph.py  build_rag.py  configs.py  prompts.py
chatbot/utils/: fileio.py
chatbot/web/: chat.py  serve.py
chroma_db/: chroma.sqlite3
results/: screen-capture.webm
