[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = "Chatbot-Illuminus"
authors = ["indigoYoshimaru <phungkhanhlinh.iu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.8.3"
pydantic = "^2.9.2"
streamlit = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
